<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caffinated</string>
    <string name="action_settings">Settings</string>
    <string name="beverages">Beverages</string>
    <string name="coffee_diet">Coffee Diet</string>
    <string name="suggestion">Suggestions</string>
    <string name="espresso">Espresso</string>
    <string name="espresso_doppio">Espresso Doppio</string>
    <string name="lungo">Lungo</string>
    <string name="caffe_macchiato">Caffe Macchiato</string>
    <string name="latte_macchiato">Latte Macchiato</string>
    <string name="cafe_coratdo">Cafe Coratdo</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="cafe_americano">Cafe Americano</string>
    <string name="long_black">Long Black</string>
    <string name="mocha">Mocha</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="info">INFO</string>
    <string name="brown">#A52A2A</string>
    <string name="purple">#800080</string>
    <string name="description_1">Singolo("Italian Single")-1 fluid ounce (30ml) of expresso. </string>
    <string name="description_2">The classic espresso recipe:a single shot of espresso  approximately 1 and half ounces Best served in a pre heated Espresso cup.</string>
    <string name="description_3">Espresso is coffee brewed by forcing a small amount of nearly boiling water under pressure through finely ground coffee beans. Espresso is generally thicker than coffee brewed by other methods, has a higher concentration of suspended and dissolved solids, and has crema on top (a foam with a creamy consistency).</string>
    <string name="title_activity_main_activity2"></string>
    <string name="hello_world"></string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="description_4">Doppio (Italian "double") -two shots of espresso.</string>
    <string name="description_5">Two Espresso shots ( About 3 ounces in total)</string>
    <string name="description_6">Doppio in espresso is a double shot, extracted using a double coffee filter in the portafilter. This results in 60 ml of drink, double the amount of a single shot espresso. More commonly called a standard double, it is a standard in judging the espresso quality in barista competitions.</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="description_7">Lungamente (Italian "long") -over extracted espresso shot.</string>
    <string name="description_8">Over extract the Espresso  about 1.75 to 2 fluid ounces (5 to 6 ml) . Percolated directly into cup and served  </string>
    <string name="description_9">Lungo is Italian for "long", and refers to the coffee beverage made by using an espresso machine to make an espresso (single or double dose or shot) with much more water (generally twice as much), resulting in a stretched espresso, a lungo. A normal espresso takes from 18 up to 30 seconds to pull, and fills 25 to 30 millilitres, while a lungo may take up to a minute to pull, and might fill 50 to 60 millilitres.</string>
    <string name="title_activity_main_activity5">MainActivity5</string>
    <string name="description_10">Macchiato (Italian "stained") -espresso marked with light milk/froth.</string>
    <string name="description_11">Pull a single shot of espresso marked with about 1 and half tablespoons of foam . Some people instead prefer just a dash of steamed milk or cream . An espresso Macchiato should be served in a demitasse  </string>
    <string name="description_12">Caffe macchiato, sometimes called espresso macchiato, is an espresso coffee drink with a small amount of milk added, today usually foamed milk. In Italian, macchiato means "stained" or "spotted" so the literal translation of caffe macchiato is "stained coffee", or coffee with a spot of milk.</string>
    <string name="title_activity_main_activity6">MainActivity6</string>
    <string name="description_13">Latte Macchiato (Italian "stained milk") -espresso poured on the top of the milk.</string>
    <string name="description_14">.</string>
    <string name="description_15">Latte macchiato is a coffee beverage, which literally means stained milk. This refers to the method of preparation, wherein the milk gets "stained" by the addition of espresso.</string>
    <string name="title_activity_main_activity7">MainActivity7</string>
    <string name="description_16">Cortado (Spanish "cut") -espresso cut with steamed milk.</string>
    <string name="description_17">Pull a shot of espresso and then add a very small amount of warm frothy milk .   </string>
    <string name="description_18">A cortado is an espresso cut with a small amount of warm milk. The word cortado is the past participle of the Spanish verb cortar (to cut). In Spanish-speaking countries, a cortado is similar to the Italian caffè macchiato, where a small amount of warm milk is added to "cut" the espresso. In the United States, the ratio of milk to coffee is between 1:1 and 1:2, and the milk is added after the espresso.</string>
    <string name="title_activity_main_activity8">MainActivity8</string>
    <string name="description_19">Cappuccino (Italian "small cup") -Espresso with steamed milk and a frothy cap.</string>
    <string name="description_20">Traditionally prepared with one third espresso  one third of steamed milk  and one third foam in a small cup typically 4-6 ounces in capacity  cappucino can be garnished with a light sprinkle of rounded chocklate cocoa powder  cinnamon  nutmeg or vanilla powder . for flavoured cappucino  simply add some quality coffee syrup such as monin to taste</string>
    <string name="description_21">A cappuccino is an Italian coffee drink which is traditionally prepared with espresso, hot milk and steamed-milk foam. The name comes from the Capuchin friars, referring to the colour of their habits, and in this context referring to the colour of the beverage when milk (originally: cream) is added in small portion to dark, brewed coffee (today mostly espresso). The physical appearance of a modern cappuccino with espresso créma and steamed milk is a result of a long evolution of the drink.</string>
    <string name="title_activity_main_activity9">MainActivity9</string>
    <string name="description_22">Americano (Italian "American") -espresso and hot water.</string>
    <string name="description_23">Pull a single shot of espresso and then add about 6 ounces of hot water- the -the strength should be similar to drip filter coffee</string>
    <string name="description_24">Caffè Americano or Americano is a style of coffee prepared by adding hot water to espresso, giving it a similar strength to, but different flavor from, regular drip coffee. The strength of an Americano varies with the number of shots of espresso and the amount of water added. The name is also spelled with varying capitalization and use of diacritics: e.g., café americano.</string>
    <string name="title_activity_main_activity10">MainActivity10</string>
    <string name="description_25">Hot water and espresso</string>
    <string name="description_26">A long black is made by pouring a double shot of espresso over hot water</string>
    <string name="description_27">A long black is a style of coffee, most commonly found in Australia, New Zealand and Brazil. It is now becoming available in the UK, predominantly in London. A long black is made by pouring a double-shot of espresso or ristretto over hot water (usually the water is also heated by the espresso machine). A long black is similar to an Americano, which is made by adding hot water to the espresso shot; but a long black retains the crema and is less voluminous, therefore more strongly flavoured.</string>
    <string name="title_activity_main_activity11">MainActivity11</string>
    <string name="description_28">Espresso, chocolate and steamed milk.</string>
    <string name="description_29">Pull two shots of espresso and pour them into a tall glass  now mix in one . now mix in one ounce of chocklate syrup or chcklate powder  and then add steamed milk until its almost full top it with whipped cream and then garnish it with some chocklate flakes.</string>
    <string name="description_30">A caffè mocha, also called mocaccino, is a chocolate-flavored variant of a caffe latte,inspired by the turin Coffee beverage Bicerin. Cafe Mocha takes its name from the Red sea coastal town of Mocha, Yemen, which as far back as the fifteenth century was a dominant exporter of coffee, especially to areas around the Arabian Peninsula. </string>
    <string name="title_activity_main_activity12">MainActivity12</string>
    <string name="enter">Enter the number of cups to prepare:</string>
    <string name="type">Type of Coffee:</string>

</resources>