<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView android:text="@string/espresso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView11"
        android:textSize="60sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:textStyle="italic"
        android:textSize="30sp"
        android:text="@string/description_1"
        android:layout_marginTop="44dp"
        android:inputType="none" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@string/purple"
        android:text="@string/instruction"
        android:inputType="none" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:text="@string/description_2"
        android:inputType="none" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@string/purple"
        android:text="@string/info"
        android:layout_marginTop="20dp"
        android:textIsSelectable="false"
        android:inputType="none"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:text="@string/description_3"
        android:inputType="none" />



</LinearLayout>
</ScrollView>