<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chaitanya.caffinated.MainActivity3">

    <TextView android:text="@string/espresso_doppio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView12"
        android:textSize="60sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:textStyle="italic"
        android:textSize="30sp"
        android:inputType="none"
        android:text="@string/description_4"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:textSize="35sp"
        android:textStyle="bold"
        android:inputType="none"
        android:layout_marginTop="20dp"
        android:textColor="@string/purple"
        android:text="@string/instruction"
        android:layout_below="@+id/editText9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText8"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:text="@string/description_5"
        android:inputType="none"
        android:layout_below="@+id/editText7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@string/purple"
        android:text="@string/info"
        android:layout_marginTop="20dp"
        android:inputType="none"
        android:textIsSelectable="false"
        android:layout_below="@+id/editText8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:textStyle="italic"
        android:textSize="30sp"
        android:inputType="none"
        android:layout_marginTop="10dp"
        android:text="@string/description_6"
        android:layout_below="@+id/editText6" />


</RelativeLayout>
</ScrollView>