<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/coffee"
    >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/horizontalScrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90sp"
                android:textSize="30sp"
                android:text="@string/beverages"
                android:id="@+id/button"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90sp"
                android:textSize="30sp"
                android:text="@string/coffee_diet"
                android:id="@+id/button2"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button"
                android:layout_toEndOf="@+id/button" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90sp"
                android:textSize="30sp"
                android:text="@string/suggestion"
                android:id="@+id/button3"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button2"
                android:layout_toEndOf="@+id/button2" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/espresso"
                android:layout_marginTop="150sp"
                android:id="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/espresso_doppio"
                android:layout_marginTop="20sp"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/lungo"
                android:layout_marginTop="20sp"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/caffe_macchiato"
                android:layout_marginTop="20sp"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/latte_macchiato"
                android:layout_marginTop="20sp"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/cafe_coratdo"
                android:layout_marginTop="20sp"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/cappuccino"
                android:layout_marginTop="20sp"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/cafe_americano"
                android:layout_marginTop="20sp"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/long_black"
                android:layout_marginTop="20sp"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:text="@string/mocha"
                android:layout_marginTop="20sp"
                android:id="@+id/textView10"
                android:layout_below="@+id/textView6" />

        </RelativeLayout>
    </HorizontalScrollView>
</ScrollView>