<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.chaitanya.caffinated.MainActivity4">

        <TextView
            android:text="@string/lungo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView13"
            android:textSize="60sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText14"
            android:textStyle="italic"
            android:textSize="30sp"
            android:inputType="none"
            android:text="@string/description_7"
            android:layout_below="@+id/textView13"
            android:layout_marginTop="44dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText12"
            android:textSize="35sp"
            android:textStyle="bold"
            android:inputType="none"
            android:textColor="@string/purple"
            android:text="@string/instruction"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText13"
            android:textStyle="italic"
            android:textSize="30sp"
            android:text="@string/description_8"
            android:layout_marginTop="10dp"
            android:inputType="none"
            android:layout_below="@+id/editText12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText11"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@string/purple"
            android:text="@string/info"
            android:inputType="none"
            android:layout_marginTop="20dp"
            android:textIsSelectable="false"
            android:layout_below="@+id/editText13"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText10"
            android:textStyle="italic"
            android:textSize="30sp"
            android:inputType="none"
            android:layout_marginTop="10dp"
            android:text="@string/description_9"
            android:layout_below="@+id/editText11" />

    </RelativeLayout>
</ScrollView>