<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.chaitanya.caffinated.MainActivity11">

        <TextView
            android:text="@string/mocha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView20"
            android:textSize="60sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText49"
            android:textStyle="italic"
            android:textSize="30sp"
            android:inputType="none"
            android:text="@string/description_28"
            android:layout_below="@+id/textView20"
            android:layout_marginTop="44dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText47"
            android:textSize="35sp"
            android:inputType="none"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@string/purple"
            android:text="@string/instruction"
            android:layout_below="@+id/editText49" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText48"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:text="@string/description_29"
            android:inputType="none"
            android:layout_below="@+id/editText47" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText46"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@string/purple"
            android:text="@string/info"
            android:inputType="none"
            android:textIsSelectable="false"
            android:layout_below="@+id/editText48"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText45"
            android:textStyle="italic"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:text="@string/description_30"
            android:layout_below="@+id/editText46"
            android:inputType="none" />

    </RelativeLayout>
</ScrollView>